# borrowed-byte-buffer

./: Cargo.toml  README.md
src/: lib.rs
